New in spot 2.11.6.dev  (not yet released)

  Documentation:

  - https://spot.lre.epita.fr/tut25.html is a new example showing
    how to print an automaton in the "BA format" (used by Rabbit
    and other tools).

  Command-line tools:

  - In places that accept format strings with '%' sequences, like
    options --stats, --name, or --output, the new '%l' can now be used
    to produce the 0-based serial number of the produced object.  This
    differs from the existing '%L' that is usually related to the line
    number of the input (when that makes sense).  For instance to
    split a file that contains many automata into several files, one
    per automaton, do

        autfilt input.hoa -o output-%l.hoa

  - For tools that produce automata, using -Hb or --hoa=b will produce
    an HOA file in which aliases are used to form a basis for the
    whole set of labels.  Those aliases are only used when more than
    one atomic proposition is used (otherwise, the atomic proposition
    and its negation is already a basis).  This can help reducing the
    size of large HOA files.

  - autfilt learned --separate-edges, to split the labels of
    the automaton using a basis of disjoint labels.  See
    https://spot.lre.epita.fr/tut25.html for some motivation.

  - ltlfilt has a new option --relabel-overlapping-bool=abc|pnn that
    will replace boolean subformulas by fresh atomic propositions even
    if those subformulas share atomic propositions.

  - ltlsynt's --ins and --outs options will iterpret any atomic
    proposition surrounded by '/' as a regular expressions.
    For intance with

      ltlsynt --ins='/^in/,/env/' --outs=/^out/,/control/' ...

    any atomic proposition that start with 'in' or contains 'env'
    will be considered as inputs, and those that start with 'out'
    or contain 'control' will be considered output.

    By default, if neither --ins nor --outs is given, ltlsynt will
    behave as if --ins='/^[iI]/' and --outs='/^[oO]/ were used.
