@@ -76,7 +76,7 @@ Requirements
 Spot requires a C++17-compliant compiler.  G++ 7.x or later, as well
 as Clang++ 5.0 or later should work.
 
-Spot expects a complete installation of Python (version 3.5 or later).
+Spot expects a complete installation of Python (version 3.7 or later).
 Especially, Python's headers files should be installed.  If you don't
 have Python installed, and do NOT want to install it, you should run
 configure with the --disable-python option (see below).
