@@ -1,5 +1,11 @@
 New in spot 2.11.6.dev  (not yet released)
 
+  Build:
+
+  - When Python bindings are enabled, Spot now requires Python 3.7 or
+    later.  Python 3.7 has reached end-of-life in 2023, so we do not
+    expect this requirement to affect many users.
+
   Documentation:
 
   - https://spot.lre.epita.fr/tut25.html is a new example showing
